[package]
name = "bevy-ui"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Riginel Ungureanu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui_and_robot_communication = {path="../ui_and_robot_communication"}
bevy = "0.12.0"
robotics_lib = {version = "0.1.8" , registry = "kellnr"}
strum ={ version = "0.26" }
strum_macros = "0.25.3"